added skills content

--- a/index.html
+++ b/index.html
@@ -56,6 +56,41 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <P class="i-do-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus deserunt molestias nostrum possimus quidem debitis, doloribus cupiditate repellat aut nemo!loremfa.</P>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae quasi voluptatibus, quos soluta eligendi mollitia!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Cupiditate a dolore fugit similique voluptatem laboriosam dolorum harum, tempore dignissimos vel, modi repellat necessitatibus.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongo DB</p>
+                    <p class="skill-description">Ad sunt animi perferendis fuga obcaecati rerum excepturi magni optio, dicta, quae perspiciatis, necessitatibus adipisci?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Molestias soluta tenetur, eos autem nesciunt esse temporibus nam dolorum eaque dignissimos amet officia? Dignissimos.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume Section -->
+        <section class="resume">
+            <h3 class="section-title-r">A Summary of My Resume</h3>
+            <div class="resume-content">
+                
+            </div>
+        </section>
     </main>
     <footer>
 
