--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Open sans font link add -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
-
+<!-- Profile section -->
 <body>
     <header class="header">
         <nav>
@@ -32,59 +32,76 @@
                 <p class="banner-description">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
-
+               
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV </button>
-                <button class="btn-contact"><i class="fa-solid fa-phone"></i> Contact </button>
+                 <!-- created by me -->
+                <button class="btn-contact"><i class="fa-solid fa-phone"></i> Contact </button> 
+                <!-- fontawesome.com -->
 
             </div>
 
                 <img src="images/hardy.png" alt="">
         </div>
     </header>
+    <!-- About me section -->
     <main>
         <section class="about">
+
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+
             <div class="about-info-container">
+
                 <div class="about-info">
                     <p class="info-title">Name:</p>
                     <p class="info-description">Mary Hardy</p>
                 </div>
+
                 <div class="about-info">
                     <p class="info-title">Email:</p>
                     <p class="info-description">info@gmail.com</p>
                 </div>
+
                 <div class="about-info">
                     <p class="info-title">Specialty:</p>
                     <p class="info-description">Web Dev</p>
                 </div>
+
                 <div class="about-info">
                     <p class="info-title">Location</p>
                     <p class="info-description">Dhaka, Bangladesh</p>
                 </div>
+
             </div>
         </section>
+
         <!-- what i do section -->
+
         <section class="what-i-do">
+
             <h3 class="section-title">What I do</h3>
-            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
             <P class="i-do-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus deserunt molestias nostrum possimus quidem debitis, doloribus cupiditate repellat aut nemo!loremfa.</P>
+
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->   
             <div class="skills-container">
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanilla JavaScript</p>
                     <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae quasi voluptatibus, quos soluta eligendi mollitia!</p>
                 </div>
+
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
                     <p class="skill-description">Cupiditate a dolore fugit similique voluptatem laboriosam dolorum harum, tempore dignissimos vel, modi repellat necessitatibus.</p>
                 </div>
+
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <p class="skill-title">Mongo DB</p>
                     <p class="skill-description">Ad sunt animi perferendis fuga obcaecati rerum excepturi magni optio, dicta, quae perspiciatis, necessitatibus adipisci?</p>
                 </div>
+
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">Node.js</p>
@@ -92,6 +109,7 @@
                 </div>
             </div>
         </section>
+        
         <!-- Resume Section -->
         <section class="resume">
             <h3 class="section-title-r">A Summary of My Resume</h3>
