--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <p class="skill-title">Node.js</p>
                     <p class="skill-description">Molestias soluta tenetur, eos autem nesciunt esse temporibus nam dolorum eaque dignissimos amet officia? Dignissimos.</p>
                 </div>
-            </div>
+            </div>GO
         </section>
         
         <!-- Resume Section -->
